test/types/range/cast-assign-init/illegal-inits.1-0.good
illegal-inits.chpl:8: error: invalid copy-initialization
illegal-inits.chpl:8: error: initializing a range with idxType color from a range with idxType bool
